examples/test/testpolicy12544.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12544
  namespace: namespace284
spec:
  podSelector:
    matchLabels:
      key40: value0
      key31: value39
      key12: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value7
          key41: value44
          key14: value19
      podSelector:
        matchLabels:
          key6: value23
